[project]
name = "wyoming-kokoro-cpu"
version = "0.1.0"
description = "CPU-only Wyoming-protocol wrapper around Kokoro-ONNX TTS."
requires-python = ">=3.11,<3.14"
dependencies = [
    "kokoro-onnx>=0.5.0",
    "wyoming==1.9.0",
    "numpy>=2.4.4",
]

[tool.uv]
# We don't ship from this directory, just consume deps. Skip building the package.
package = false
